--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,10 +12,10 @@ body {
   position: absolute;
   min-height: 100%;
   min-width: 100%;
-  background: $subtle-wheat;
+  background: $vista-white;
   
   .app.container-fluid {
     padding-top: 15px;
-    background: $subtle-wheat;
+    background: $vista-white;
   }
 }
