--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -23,6 +23,34 @@ $cerulean: #00B0F6;
 $heliotrope: #E76BF3; // pink
 $purple: #995cb8;
 
+// ________ NEW COLORS ______________
+// background:
+$vista-white: #FCFAF7;
+$pampas: #F9F8F6;
+
+$deep-sea-green: #084D3E;
+
+$cape-cod: #424746;
+$gun-smoke: #7E8382;
+$nandor: #545A59;
+
+$snow-drift: #F0F4F1;
+$casablanca: #F2B04D;
+$pirate-gold: #C98300;
+$rum: #7F6A93;
+$steel-blue: #4997AE;
+$cutty-sark: #4D7469;
+$jungle-green: #30A86E;
+$charm: #DE869B;
+
+// #.9 opacity
+$jungle-mist: #BBD4D8DD;
+$mid-gray: #676471DD;
+$storm-gray: #6D7383DD;
+$opal: #9FBCC0DD;
+$botticelli: #C5DDE2DD;
+$copper: #B2793DDD;
+
 // TODO set better paramaters
 $max-width: calc(100vw - 80px);
 $table-margin: 15px;
