--- a/src/components/KPTable/styles.scss
+++ b/src/components/KPTable/styles.scss
@@ -1,9 +1,12 @@
 @import '../../styles/_variables.scss';
 
-.kp-table {
-  background-color: white;
+.dashboard {
 
-  h2 {
-    padding-left: 35px;
+  .kp-table {
+    background-color: white;
+    
+    h2 {
+      padding-left: 45px;
+    }
   }
 }
