--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -177,6 +177,11 @@ $nav-height: 70px;
       padding-left: 15px;
     }
   }
+
+  .td-tooltip {
+    background: rgba(0, 0, 0, 0.8);
+    text-align: left;
+  }
 }
 
 #direct-query {
