--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -146,7 +146,7 @@ $nav-height: 70px;
   }
 
   .glossary {
-    font-family: serif;
+    // font-family: serif;
     .terms {
       @media screen and (min-width: 768px) {
         column-count: 2;
