--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,9 +3,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Archivo Narrow', sans-serif;
   // background: #f6f7f8;
   color: #393c45;
+}
+
+.highcharts-container, .highcharts-container .text {
+  font-family: 'Archivo Narrow', sans-serif !important;
 }
 
 #root {
