--- a/src/components/NestedBoxes/styles.scss
+++ b/src/components/NestedBoxes/styles.scss
@@ -1,5 +1,19 @@
 @import '../../styles/_variables.scss';
 
+
+.prog-95 {
+  display: flex;
+  justify-content: center;
+
+  p.title {
+    // text-align: center;
+    margin-bottom: 5px;
+    font-size: 18px;
+    font-weight: lighter;
+    white-space: pre;
+  }
+}
+
 .nested-boxes {
   // margin-left: auto;
   // margin-right: auto;
@@ -19,7 +33,8 @@
   .bridge {
     height: 100%;
     background: transparent;
-    border: 1px solid;
+    border: 1px dashed;
+    border-right: none;
   }
   
   .inner-content {
@@ -34,8 +49,12 @@
   }
   
   .below-content {
+    .heading {
+      font-size: 22px;
+      font-weight: 600;
+    }
     position: absolute;
     // top: 100%;
-    font-size: 11px;
+    font-size: 14px;
   }
 }
