--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -1,8 +1,12 @@
 @import '../../styles/_variables.scss';
-$nav-height: 70px;
+$nav-height-sm: 50px;
+$nav-height: 64px;
 
 .dashboard {
-  padding-top: $nav-height;
+  padding-top: $nav-height-sm;
+  @media screen and (min-width: 768px) {
+    padding-top: $nav-height;
+  }
 
   .country-name, .country-details {
     color: $who-brown;
@@ -18,15 +22,21 @@ $nav-height: 70px;
     top: 0;
     left: 0;
     right: 0;
-    height: $nav-height;
-    color: whitesmoke;
-    background-color: $accent-blue-x-dark;
+    height: $nav-height-sm;
+    color: $deep-sea-green;
+    font-weight: 600;
+    background-color: white;
+    // background-color: $accent-blue-x-dark;
     padding: 10px;
     z-index: 100;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);;
 
     .who-logo {
-      max-width: 160px;
+      img {
+        max-width: 95px;
+      }
       cursor: pointer;
+      margin: auto;
     }
 
     span.title {
@@ -34,26 +44,26 @@ $nav-height: 70px;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      font-size: 4vw;
-    }
-    @media screen and (min-width: 1200px) {
-      span.title {
-        // color: yellowgreen;
-        font-size: 46px;
-      }
-    }
-  }
-
-  .prog-95 {
-    display: flex;
-    justify-content: center;
-
-    p {
-      text-align: center;
-      margin-bottom: 5px;
       font-size: 15px;
-      font-weight: lighter;
-      white-space: pre;
+    }
+    .link-home {
+      margin: auto;
+      padding-right: 10px;
+      color: $deep-sea-green;
+      font-size: 14px;
+    }
+
+    @media screen and (min-width: 768px) {
+      height: $nav-height;
+      span.title {
+        font-size: 18px;
+      }
+      .link-home {
+        font-size: 16px;
+      }
+      .who-logo img {
+        max-width: 115px;
+      }
     }
   }
 
