--- a/src/components/NestedBoxes/styles.scss
+++ b/src/components/NestedBoxes/styles.scss
@@ -5,6 +5,11 @@
   display: flex;
   justify-content: center;
 
+  .content {
+    // background: white;
+    // padding: 0px;
+  }
+
   p.title {
     // text-align: center;
     margin-bottom: 5px;
