--- a/src/components/NestedBoxes/styles.scss
+++ b/src/components/NestedBoxes/styles.scss
@@ -1,24 +1,5 @@
 @import '../../styles/_variables.scss';
 
-
-.prog-95 {
-  display: flex;
-  justify-content: center;
-
-  .content {
-    // background: white;
-    // padding: 0px;
-  }
-
-  p.title {
-    // text-align: center;
-    margin-bottom: 5px;
-    font-size: 18px;
-    font-weight: lighter;
-    white-space: pre;
-  }
-}
-
 .nested-boxes {
   // margin-left: auto;
   // margin-right: auto;
@@ -26,6 +7,14 @@
   * { 
     box-sizing: border-box;
     position: relative;
+  }
+
+  .title {
+    // text-align: center;
+    margin-bottom: 5px;
+    font-size: 18px;
+    font-weight: lighter;
+    white-space: pre;
   }
   
   .box {
