--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -1,4 +1,5 @@
 @import '../../styles/_variables.scss';
+$buffer: 10px;
 $nav-height-sm: 50px;
 $nav-height: 64px;
 
@@ -8,11 +9,67 @@ $nav-height: 64px;
     padding-top: $nav-height;
   }
 
+   .nav {
+    position: fixed;
+    flex-wrap: nowrap;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: $nav-height-sm;
+    color: $deep-sea-green;
+    font-weight: 600;
+    background-color: white;
+    // background-color: $accent-blue-x-dark;
+    padding: $buffer;
+    z-index: 100;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);;
+
+    .who-logo {
+      img {
+        max-width: 95px;
+      }
+      cursor: pointer;
+      margin: auto;
+    }
+
+    span.title {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      font-size: 15px;
+    }
+    .link-home {
+      margin: auto;
+      padding-right: $buffer;
+      color: $deep-sea-green;
+      font-size: 14px;
+    }
+
+    @media screen and (min-width: 768px) {
+      height: $nav-height;
+      span.title {
+        font-size: 18px;
+      }
+      .link-home {
+        font-size: 16px;
+      }
+      .who-logo img {
+        max-width: 115px;
+      }
+    }
+  }
 
   .country-context {
+    // height: 100%;
+    .card-stock {
+      height: 100%;
+    }
+
     .content {
-      padding-left: 10px;
-      padding-right: 10px;
+      // padding-left: $buffer;
+      // padding-right: $buffer;
+      // padding: 30px 50px;
     }
     
     .name {
@@ -22,13 +79,14 @@ $nav-height: 64px;
       // color: $who-brown;
     }
     .details {
-      // line-height: 1;
       display: flex;
       .detail {
+        line-height: 1.2;
         // display: inline;
         padding-right: 50px;
         .title {
-          display: inline;
+          margin-bottom: 4px;
+          // display: inline;
           font-size: 14px;
           // font-weight: lighter;
         }
@@ -49,13 +107,35 @@ $nav-height: 64px;
         font-size: 54px;
       }
       .details {
-        flex-direction: column;
+        // flex-direction: column;
+        // padding-bottom: 0;
         .detail {
           .title {
             font-size: 15px;
           }
           .value {
             font-size: 24px;
+          }
+        }  
+      }
+    }
+
+    @media screen and (min-width: 992px) {
+      .content {
+
+      }
+      
+      .name {
+        // font-size: 54px;
+      }
+      .details {
+        flex-direction: column;
+        .detail {
+          .title {
+            // font-size: 15px;
+          }
+          .value {
+            // font-size: 24px;
           }
         }  
       }
@@ -84,58 +164,61 @@ $nav-height: 64px;
     }
   }
 
-  .nav {
-    position: fixed;
-    flex-wrap: nowrap;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: $nav-height-sm;
-    color: $deep-sea-green;
-    font-weight: 600;
-    background-color: white;
-    // background-color: $accent-blue-x-dark;
-    padding: 10px;
-    z-index: 100;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);;
+  .prog-95 {
+    .card-stock {
+      margin-top: 2*$buffer;
+    }
 
-    .who-logo {
-      img {
-        max-width: 95px;
-      }
-      cursor: pointer;
+    .nested-boxes {
       margin: auto;
     }
+    
+    display: flex;
+    justify-content: center;
 
-    span.title {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      font-size: 15px;
+    .content {
+      // background: white;
+      // padding: 0px;
     }
-    .link-home {
-      margin: auto;
-      padding-right: 10px;
-      color: $deep-sea-green;
-      font-size: 14px;
+  }
+
+  .card-stock {
+    background: white;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    // padding: 10px;
+    .content {
+      padding: 30px 50px;
+    }
+  }
+
+  @media screen and (min-width: 992px) {
+    .country-context {
+      .card-stock {
+        // margin-right: 1.5*$buffer;
+      }
     }
 
-    @media screen and (min-width: 768px) {
-      height: $nav-height;
-      span.title {
-        font-size: 18px;
-      }
-      .link-home {
-        font-size: 16px;
-      }
-      .who-logo img {
-        max-width: 115px;
+    .prog-95 {
+      .card-stock {
+        margin-top: 0;
+        // margin-left: 1.5*$buffer;
       }
     }
   }
 
+  @media screen and (min-width: 1200px) {
+    .card-stock {
+
+    }
+  }
+
   .charts {
+
+    .card-stock {
+      // padding-right: 20px;
+    }
+    
     .plhiv.tooltip-container.open {
       width: 340px;
       height: 220px;
@@ -147,7 +230,7 @@ $nav-height: 64px;
 
     // .modeled-icon {
     //   position: absolute;
-    //   right: 10px;
+    //   right: $buffer;
     //   top: 12px;
     //   width: 18px;
     //   z-index: 1;
@@ -164,9 +247,9 @@ $nav-height: 64px;
     }
 
     .chart-container {
-
-      background: white;
-      border: $vista-white 10px solid;
+      // background: white;
+      margin: 1.5*$buffer $buffer;
+      // border: blue $buffer solid;
       // box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
       // padding: 30px;
       // margin: 20px;
@@ -213,7 +296,7 @@ $nav-height: 64px;
         background: white;
       }
       .contents {
-        margin: 10px;
+        margin: $buffer;
       }
       svg {
         cursor: pointer;
