--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -8,7 +8,8 @@ $nav-height: 64px;
     top: 0;
     right: 0;
     bottom: 0;
-    background-color: transparentize($color: $deep-sea-green, $amount: .58);
+    // background-color: transparentize($color: $deep-sea-green, $amount: .58);
+    background-color: $vista-white; //#F9EEDD
     z-index: 999999;
     content: '';
     pointer-events: all;
@@ -56,19 +57,15 @@ $nav-height: 64px;
         margin: $buffer;
 
         &:nth-child(1) {
-          // background-color: red;
           animation: bounce 3s ease-in-out 0s infinite;
         }
         &:nth-child(2) {
-          // background-color: blue;
           animation: bounce 3s ease-in-out .25s infinite;
         }
         &:nth-child(3) {
-          // background-color: yellow;
           animation: bounce 3s ease-in-out .5s infinite;
         }
         &:nth-child(4) {
-          // background-color: yellow;
           animation: bounce 3s ease-in-out .75s infinite;
         }
       }
