--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -16,21 +16,24 @@ $nav-height: 64px;
 
     .name {
       font-size: 42px;
-      margin-top: 22vh;
-      padding-bottom: 2*$buffer;
+      margin-top: 20vh;
+      padding-bottom: 1vh;
+      margin-left: 5vw;
+      margin-right: 5vw;
     }
     .loading {
       font-size: 28px;
+      position: relative;
+      // top: 20vh;
       position: absolute;
-      text-align: center;
       display: block;
-      width: 100%;
-      bottom: 22vh;
+      width: (100%);
+      bottom: 20vh;
+      // bottom: 44vh;
     }
     .name, .loading {
       text-align: center;
-      margin-left: 5vw;
-      margin-right: 5vw;
+      color: $deep-sea-green;
       line-height: 1;
       font-weight: 600;
       // color: $who-brown;
@@ -42,17 +45,15 @@ $nav-height: 64px;
     @media screen and (min-width: 1200px) {
       .name { font-size: 78px; }
       .loading { font-size: 56px; }
-      .squares span {
-        width: 120px !important;
-        height: 120px !important;
-      }
     }
 
     .squares {
       text-align: center;
       span {
-        width: 10vw;
-        height: 10vw;
+        width: calc(8vw + 2vh);
+        height: calc(8vw + 2vh);
+        max-width: 130px;
+        max-height: 130px;
         display: inline-block;
         margin: $buffer;
 
@@ -74,19 +75,62 @@ $nav-height: 64px;
         0% {
         // 0%, 100%, 60% {
           // opacity: 1;
-          -webkit-transform: translateY(0); // rotate(-15deg);
-          transform: translateY(0); // rotate(-15deg);
+          translate: 0 0; // rotate(-15deg);
+          translate: 0 0; // rotate(-15deg);
+        }
+        6% {
+          rotate: 0deg;
+        }
+        30% {
+          rotate: 180deg;
         }
         50% {
           // opacity: .1;
-          -webkit-transform: translateY(20vh); // rotate(15deg);
-          transform: translateY(20vh); // rotate(15deg);
+          rotate: 180deg;
+          translate: 0 25vh; // rotate(180deg);
         }
         100% {
           // opacity: .1;
-          -webkit-transform: translateY(0); // rotate(-15deg);
-          transform: translateY(0); // rotate(-15deg);
+          rotate: 180deg;
+          translate: 0 0; // rotate(180deg);
+          translate: 0 0; // rotate(180deg);
         }
+        // simple bounce
+        // 0% {
+        //   -webkit-transform: translateY(0); // rotate(-15deg);
+        //   transform: translateY(0); // rotate(-15deg);
+        // }
+        // 50% {
+        //   // opacity: .1;
+        //   -webkit-transform: translateY(20vh); // rotate(15deg);
+        //   transform: translateY(20vh); // rotate(15deg);
+        // }
+        // 100% {
+        //   // opacity: .1;
+        //   -webkit-transform: translateY(0); // rotate(-15deg);
+        //   transform: translateY(0); // rotate(-15deg);
+        // }
+        // cartwheel swoop
+        // 0% {
+        //   -webkit-transform: translateY(0);
+        //   transform: translateY(0);
+        // }
+        // 14% {
+        //   rotate: 0deg;
+        // }
+        // 32% {
+        //   rotate: 270deg;
+        // }
+        // 50% {
+        //   // opacity: .1;
+        //   -webkit-transform: translateY(20vh) rotate(270deg);
+        //   transform: translateY(20vh) rotate(270deg);
+        // }
+        // 100% {
+        //   // opacity: .1;
+        //   -webkit-transform: translateY(0) rotate(270deg);
+        //   transform: translateY(0) rotate(270deg);
+        // }
       }
     }
   }
