--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -58,58 +58,33 @@ $nav-height: 64px;
         margin: $buffer;
 
         &:nth-child(1) {
-          animation: bounce 3s ease-in-out 0s infinite;
+          animation: bounce 4s ease-in-out 0s infinite;
         }
         &:nth-child(2) {
-          animation: bounce 3s ease-in-out .25s infinite;
+          animation: bounce 4s ease-in-out .25s infinite;
         }
         &:nth-child(3) {
-          animation: bounce 3s ease-in-out .5s infinite;
+          animation: bounce 4s ease-in-out .5s infinite;
         }
         &:nth-child(4) {
-          animation: bounce 3s ease-in-out .75s infinite;
+          animation: bounce 4s ease-in-out .75s infinite;
         }
       }
 
       @keyframes bounce {
+        // simple bounce spin
         0% {
-        // 0%, 100%, 60% {
-          // opacity: 1;
-          translate: 0 0; // rotate(-15deg);
-          translate: 0 0; // rotate(-15deg);
-        }
-        6% {
-          rotate: 0deg;
-        }
-        30% {
-          rotate: 180deg;
+          -webkit-transform: translateY(0);
+          transform: translateY(0);
         }
         50% {
-          // opacity: .1;
-          rotate: 180deg;
-          translate: 0 25vh; // rotate(180deg);
+          -webkit-transform: translateY(calc(40vh - 100%)) rotate(540deg);
+          transform: translateY(calc(40vh - 100%)) rotate(540deg);
         }
         100% {
-          // opacity: .1;
-          rotate: 180deg;
-          translate: 0 0; // rotate(180deg);
-          translate: 0 0; // rotate(180deg);
+          -webkit-transform: translateY(0) rotate(540deg);
+          transform: translateY(0) rotate(540deg);
         }
-        // simple bounce
-        // 0% {
-        //   -webkit-transform: translateY(0); // rotate(-15deg);
-        //   transform: translateY(0); // rotate(-15deg);
-        // }
-        // 50% {
-        //   // opacity: .1;
-        //   -webkit-transform: translateY(20vh); // rotate(15deg);
-        //   transform: translateY(20vh); // rotate(15deg);
-        // }
-        // 100% {
-        //   // opacity: .1;
-        //   -webkit-transform: translateY(0); // rotate(-15deg);
-        //   transform: translateY(0); // rotate(-15deg);
-        // }
         // cartwheel swoop
         // 0% {
         //   -webkit-transform: translateY(0);
