--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -140,10 +140,15 @@ $nav-height: 64px;
 
     .who-logo {
       img {
-        max-width: 95px;
+        width: 95px;
       }
       cursor: pointer;
       margin: auto;
+      width: 36px;
+      overflow: hidden;
+      flex-shrink: 0;
+      flex-grow: 0;
+
     }
     span.title {
       flex-grow: 1;
@@ -151,6 +156,9 @@ $nav-height: 64px;
       flex-direction: column;
       justify-content: center;
       font-size: 15px;
+      &.desktop {
+        display: none;
+      }
     }
     .link-home {
       margin: auto;
@@ -160,9 +168,20 @@ $nav-height: 64px;
     }
     .input-group {
       max-width: 140px;
-      margin-right: 2*$buffer;
+      margin-right: $buffer;
       select {
         height: 34px;
+      }
+    }
+    @media screen and (min-width: 570px) {
+      span.title {
+        font-size: 18px;
+        &.desktop {
+          display: flex;
+        }
+        &.mobile {
+          display: none;
+        }
       }
     }
 
@@ -174,10 +193,15 @@ $nav-height: 64px;
       .link-home {
         font-size: 16px;
       }
-      .who-logo img {
-        max-width: 115px;
+      .who-logo {
+        width: unset;
+        img {
+          width: unset;
+          max-width: 115px;
+        }
       }
       .input-group {
+        margin-right: 2*$buffer;
         select {
           height: unset;
         }
