--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ body {
   padding: 0;
   font-family: 'Archivo Narrow', sans-serif;
   // background: #f6f7f8;
-  color: #393c45;
+  color: $near-black;
 }
 
 .highcharts-container, .highcharts-container .text {
