--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -30,6 +30,8 @@ $pampas: #F9F8F6;
 
 $deep-sea-green: #084D3E;
 
+$near-black: #313534;
+$sirocco: #6E7272;
 $cape-cod: #424746;
 $gun-smoke: #7E8382;
 $nandor: #545A59;
@@ -50,6 +52,10 @@ $storm-gray: #6D7383DD;
 $opal: #9FBCC0DD;
 $botticelli: #C5DDE2DD;
 $copper: #B2793DDD;
+
+// $link-color: $deep-sea-green;
+$link-color: #956837;
+// $link-hover-color: $cutty-sark;
 
 // TODO set better paramaters
 $max-width: calc(100vw - 80px);
