--- a/src/components/KPTable/styles.scss
+++ b/src/components/KPTable/styles.scss
@@ -4,7 +4,7 @@
 
   .kp-table {
     background-color: white;
-    max-width: $max-width;
+    // max-width: $max-width;
     margin-top: $table-margin;
     margin-left: $table-margin;
     padding-bottom: 1*$table-margin;
