--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -59,5 +59,6 @@ $link-color: #956837;
 
 // TODO set better paramaters
 $max-width: calc(100vw - 80px);
+$max-width-mobile: calc(100vw - 65px);
 $table-margin: 15px;
 $buffer: 10px;
