--- a/src/components/PolicyTable/styles.scss
+++ b/src/components/PolicyTable/styles.scss
@@ -2,7 +2,7 @@
 
 .policy-table {
   background-color: white;
-  max-width: $max-width;
+  // max-width: $max-width;
   margin-left: $table-margin;
   padding-bottom: 1*$table-margin;
   margin-bottom: 2*$table-margin;
