--- a/src/containers/Dashboard/styles.scss
+++ b/src/containers/Dashboard/styles.scss
@@ -156,6 +156,8 @@ $nav-height: 64px;
       flex-direction: column;
       justify-content: center;
       font-size: 15px;
+      flex-basis: 250px;
+      line-height: 1;
       &.desktop {
         display: none;
       }
