--- a/src/components/DemographicsTable/styles.scss
+++ b/src/components/DemographicsTable/styles.scss
@@ -2,10 +2,18 @@
 
 .dashboard {
 
+  // TABLE FIXES
   .table {
+    // otherwise table overflows screen width
     max-width: $max-width;
     @media screen and (max-width: 576px) {
       max-width: $max-width-mobile;
+    }
+    @media screen and (min-width: 768px) {
+      // otherwise table doesn't take up screen width
+      &.table-responsive {
+        display: table;
+      }
     }
   }
 
@@ -13,6 +21,7 @@
     position: relative;
     background-color: white;
     padding-bottom: $table-margin;
+    // margin-left: $table-margin;
     
     .table {
       @media screen and (min-width: 992px) {
@@ -20,7 +29,6 @@
       }
       
       // max-width: $max-width;
-      margin-left: $table-margin;
       
       td {
         white-space: nowrap;
