--- a/src/components/NestedBoxes/styles.scss
+++ b/src/components/NestedBoxes/styles.scss
@@ -1,54 +1,22 @@
 @import '../../styles/_variables.scss';
 
 .nested-boxes {
-  // margin-left: auto;
-  // margin-right: auto;
-
-  * { 
-    box-sizing: border-box;
-    position: relative;
+  svg {
+    max-height: 300px;
   }
 
-  .title {
-    // text-align: center;
-    margin-bottom: 5px;
-    font-size: 18px;
-    font-weight: lighter;
-    white-space: pre;
+  line {
+    stroke-width: .4;
+    stroke-dasharray: .6 .8;
   }
-  
-  .box {
-    position: absolute;
-    right: 0;
-  }
-  .box.box-0{
-    position: relative;
-  }
-  .bridge {
-    height: 100%;
-    background: transparent;
-    border: 1px dashed;
-    border-right: none;
-  }
-  
-  .inner-content {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: whitesmoke;
-  }
-  
-  .below-content {
-    .heading {
-      font-size: 22px;
-      font-weight: 600;
-    }
-    position: absolute;
-    // top: 100%;
-    font-size: 14px;
+
+  text {
+
+    // .percent {
+    //  font-size: 18px; 
+    // }
+    // .description {
+    //  font-size: 14px; 
+    // }
   }
 }
