--- a/src/components/NestedBoxes/styles.scss
+++ b/src/components/NestedBoxes/styles.scss
@@ -1,22 +1,36 @@
 @import '../../styles/_variables.scss';
 
-.nested-boxes {
-  svg {
-    max-height: 300px;
+.prog-95 {
+  .title {
+    transform: rotate(-90deg);
+    position: absolute;
+    left: calc(-120px + 25%);
+    top: 154px;
+    font-size: 18px;
+
+    font-weight: 300;
+    white-space: pre;
   }
 
-  line {
-    stroke-width: .4;
-    stroke-dasharray: .6 .8;
+  @media screen and (min-width: 1200px) {
+    font-size: 24px;
   }
+  
+  .nested-boxes {
+    svg {
+      padding-left: 10%;
+      display: block;
+      margin: auto;
+      max-height: 300px;
+    }
 
-  text {
+    line {
+      stroke-width: .4;
+      stroke-dasharray: .6 .8;
+    }
 
-    // .percent {
-    //  font-size: 18px; 
-    // }
-    // .description {
-    //  font-size: 14px; 
-    // }
+    text {
+
+    }
   }
 }
